@@ -152,6 +152,14 @@ static int getDay(const char *s) {
   return -1;
 }
 
+static TimeInDay getTimeFromDateVar(JsVar *date, bool forceGMT) {
+  return getTimeFromMilliSeconds(jswrap_date_getTime(date), forceGMT);
+}
+
+static CalendarDate getCalendarDateFromDateVar(JsVar *date, bool forceGMT) {
+  return getCalendarDate(getTimeFromDateVar(date, forceGMT).daysSinceEpoch);
+}
+
 /*JSON{
   "type" : "class",
   "class" : "Date"
@@ -233,16 +241,20 @@ JsVar *jswrap_date_constructor(JsVar *args) {
 
 /*JSON{
   "type" : "method",
+  "ifndef" : "SAVE_ON_FLASH",
   "class" : "Date",
   "name" : "getTimezoneOffset",
   "generate" : "jswrap_date_getTimezoneOffset",
-  "return" : ["float","The difference, in minutes, between UTC and local time"]
+  "return" : ["int32","The difference, in minutes, between UTC and local time"]
 }
-The getTimezoneOffset() method returns the time-zone offset from UTC, in minutes, for the current locale.
+This returns Espruino's time-zone offset from UTC, in minutes.
+
+This is set with `E.setTimeZone` and is System-wide. The value returned
+has nothing to do with the instance of `Date` that it is called on.
+
  */
-JsVarFloat jswrap_date_getTimezoneOffset(JsVar *parent) {
-  NOT_USED(parent);
-  return 0;
+int jswrap_date_getTimezoneOffset(JsVar *parent) {
+  return -getTimeFromDateVar(parent, false/*system timezone*/).zone;
 }
 
 
@@ -283,15 +295,6 @@ JsVarFloat jswrap_date_setTime(JsVar *date, JsVarFloat timeValue) {
   if (date)
     jsvObjectSetChildAndUnLock(date, "ms", jsvNewFromFloat(timeValue));
   return timeValue;
-}
-
-
-static TimeInDay getTimeFromDateVar(JsVar *date, bool forceGMT) {
-  return getTimeFromMilliSeconds(jswrap_date_getTime(date), forceGMT);
-}
-
-static CalendarDate getCalendarDateFromDateVar(JsVar *date, bool forceGMT) {
-  return getCalendarDate(getTimeFromDateVar(date, forceGMT).daysSinceEpoch);
 }
 
 
