@@ -108,6 +108,7 @@
             MDBT42Q: Add LED2 var in the Espruino interpreter, but don't use it for the bootloader
             ESP8266: release heap used by logDebug(true) (fix #1508)
 	    ESP8266: remove SHA256 SHA512 (fix #1517)
+            Ensure `Date.getTimezoneOffset()` returns the correct timezone offset (fix #1515)
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
